finish student information

--- a/DM2025-Lab1-Homework.ipynb
+++ b/DM2025-Lab1-Homework.ipynb
@@ -5,11 +5,11 @@
    "metadata": {},
    "source": [
     "### Student Information\n",
-    "Name:\n",
+    "Name: 張晴淳\n",
     "\n",
-    "Student ID:\n",
+    "Student ID: 313700038\n",
     "\n",
-    "GitHub ID:"
+    "GitHub ID: JEMMA-CHANG"
    ]
   },
   {
